--- a/HTML/CV.html
+++ b/HTML/CV.html
@@ -11,6 +11,12 @@
 
     <header>
         <h1>Joséphine Modiano</h1>
+        <article class="infoperso">
+            <a href="mailto:josephine.modiano@gmail.com" target="_blank" > josephine.modiano@gmail.com</a><br>
+            06 25 08 38 89 <br>
+            05/01/1995 <br>
+            75019, Paris <br>
+        </article>
         <img src="./2002257-belle-femme-avatar-personnage-icone-gratuit-vectoriel.jpg" height="100" width="100">
     </header>
 
