--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="principal">
             <div class="titre"><h1>Joséphine Modiano</h1></div>
-            <div class="jojo"><img src="./Jojo.jpg" height="175" width="175"></div>
+            <div class="jojo"><img src="./images/Jojo.jpg" height="175" width="175"></div>
         </div>
 
         <p class="phrase">
@@ -109,14 +109,14 @@
             
 
             <article class="image">
-                    <img src="./HTML5_logo_black.svg.png" width="38" height="38">
-                    <img src="./CSS.png" width="33" height="38">
-                    <img src="./JV noir.png" width="36" height="36">
-                    <img src="./chrome.png" width="38" height="38">
-                    <img src="./Photoshop-Logo-PNG-Photos.png" width="43" height="45">
-                    <img src="./WP.png" width="38" height="35">
-                    <img src="./FIGMA.png" width="38" height="36">
-                    <img src="./2 - Office Logo.jpg.crdownload" width="88" height="43">
+                    <img src="./images/pictos/HTML5_logo_black.svg.png" width="38" height="38">
+                    <img src="./images/pictos/CSS.png" width="33" height="38">
+                    <img src="./images/pictos/JV noir.png" width="36" height="36">
+                    <img src="./images/chrome.png" width="38" height="38">
+                    <img src="./images/pictos/Photoshop-Logo-PNG-Photos.png" width="43" height="45">
+                    <img src="./images/pictos/WP.png" width="38" height="35">
+                    <img src="./images/pictos/FIGMA.png" width="38" height="36">
+                    <img src="./images/pictos/HTML5_logo_black.svg.png" width="88" height="43">
             </article>
 
         <h2>Langues</h2>
